--- a/index.html
+++ b/index.html
@@ -4,7 +4,29 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./fonts/fonts.css">
+    <link rel="stylesheet" href="./styles/global.css">
+    <link rel="stylesheet" href="./styles/style.css">
+    
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <nav>
+        <ul>
+          <li>главная</li>
+          <li>посмотреть лоты</li>
+          <li>об аукционе</li>
+        </ul>
+      </nav>
+      <a href="./images/logo-black.svg"></a>
+      <address></address>
+    </header>
+    <main>
+      <section class="cover"></section>
+      <section class="lots"></section>
+      <section class="about"></section>
+    </main>
+    <footer class="footer"></footer>
+  </body>
 </html>
