--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </nav>
       <a class="header__logo">
         <img
-          src="/images/logo-black.svg"
+          src="./images/logo-black.svg"
           alt="лого"
           class="header__logo-image"
         />
