--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
       </a>
       <address class="address">
         <div class="header__address">
-          <a class="header__address_underline" href="tel:+9 999 555 5555"
-            >+9 999 555 5555</a
+          <a class="header__address_underline" href="tel:+99995555555"
+            >+9(999)555-55-55</a
           >
           <a class="header__address_underline" href="mailto:info@sobaka.ge"
             >info@sobaka.ge</a
@@ -39,6 +39,7 @@
         </div>
       </address>
     </header>
+    <main>
     <section class="cover">
       <div class="overlay"></div>
       <h1 class="cover__title">
@@ -142,8 +143,8 @@
     <footer class="footer">
       <address class="footer__address">
         <div class="footer__address_column">
-          <a class="footer__address_underline" href="tel:+9 999 555 5555"
-            >+9 999 555 5555</a
+          <a class="footer__address_underline" href="tel:+99995555555"
+          >+9(999)555-55-55</a
           >
           <a class="footer__address_underline" href="mailto:info@sobaka.ge"
             >info@sobaka.ge</a
@@ -185,6 +186,7 @@
           </li>
         </ul>
       </div>
+    </main>
     </footer>
   </body>
 </html>
