fix bugs close tag

--- a/index.html
+++ b/index.html
@@ -40,111 +40,114 @@
       </address>
     </header>
     <main>
-    <section class="cover">
-      <div class="overlay"></div>
-      <h1 class="cover__title">
-        <span class="aligned-text">оно</span>
-        <span class="aligned-text_center">тебе</span>
-        <span class="aligned-text_right">надо</span>
-      </h1>
-      <div class="cover__description">
-        <span class="cover__description-text">
-          Аукцион вещей, в которые никто не верил
-        </span>
-        <button class="bet-button">Сделать ставку</button>
-      </div>
-    </section>
-    <section class="lots">
-      <h2 class="lots__heading">Лоты</h2>
-      <ul class="lots__card-list">
-        <li>
-          <a href="#" class="card-link">
-            <article class="card card_type_film">
-              <div class="overlay"></div>
-              <h3 class="card__title">
-                Фильм режиссёра, который бросил киношколу
-              </h3>
-              <p class="card__text">
-                Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
-                ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
-              </p>
-            </article>
-          </a>
-        </li>
-        <li>
-          <a href="#" class="card-link">
-            <article class="card card_type_book">
-              <div class="overlay"></div>
-              <h3 class="card__title">
-                Книга, где описан один скучный день из жизни рекламного агента
-              </h3>
-              <p class="card__text">
-                Объёмом почти в тысячу страниц. Иногда без знаков препинания и с
-                переходами на древнеанглийский. В ней одновременно
-                рассказывается о 16 июня 1904 года и об истории литературы,
-                начиная с античных времён. И это всё накладывается на эпическую
-                поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса
-                Джойса?
-              </p>
-            </article>
-          </a>
-        </li>
-        <li>
-          <a href="#" class="card-link">
-            <article class="card card_type_picture">
-              <div class="overlay"></div>
-              <h3 class="card__title">
-                Картина, которую повторит даже 5-летний сын маминой подруги
-              </h3>
-              <p class="card__text">
-                Ну действительно, там линия, тут кружочек, а здесь и вовсе
-                что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
-                котиков... Сколько бы вы на такое поставили, если бы не знали,
-                что это — одна из революционных работ Кандинского?
-              </p>
-            </article>
-          </a>
-        </li>
-      </ul>
-      <a href="#" class="lots__look-more-link"> посмотреть больше </a>
-    </section>
-    <section class="about">
-      <div class="logo__column">
-        <div class="about__logo">
-          <img
-            class="about__logo-image"
-            src="./images/logo-white.svg"
-            alt="лого"
-          />
+      <section class="cover">
+        <div class="overlay"></div>
+        <h1 class="cover__title">
+          <span class="aligned-text">оно</span>
+          <span class="aligned-text_center">тебе</span>
+          <span class="aligned-text_right">надо</span>
+        </h1>
+        <div class="cover__description">
+          <span class="cover__description-text">
+            Аукцион вещей, в которые никто не верил
+          </span>
+          <button class="bet-button">Сделать ставку</button>
         </div>
-      </div>
-      <div class="about__column">
-        <h2 class="about__title">об аукционе</h2>
-        <div class="about__text">
-          <p>
-            Здесь вы&nbsp;не&nbsp;встретите очередное пафосное собрание
-            невероятно дорогого антиквариата. Наши лоты вообще не&nbsp;должны
-            были попасть ни&nbsp;на&nbsp;один аукцион. Потому что кому нужен
-            дневник девочки-подростка или картина, которую может нарисовать даже
-            ребёнок? Кому нужны все эти странные вещи, созданные любителями?
-          </p>
-          <p>
-            Слишком сложные или, наоборот, слишком простые. Опережающие своё
-            время. В&nbsp;пух и&nbsp;прах растерзанные критиками. Непринятые
-            и&nbsp;непонятые. Когда-то они казались просто неудачными. Но,
-            несмотря на&nbsp;критику, кажущуюся простоту или сложность, сейчас
-            без этих лотов невозможно представить современную культуру. Когда
-            в&nbsp;эти вещи не верил никто, продолжали верить их&nbsp;создатели.
-            И&nbsp;сейчас эти лоты стали культовыми.
-          </p>
+      </section>
+      <section class="lots">
+        <h2 class="lots__heading">Лоты</h2>
+        <ul class="lots__card-list">
+          <li>
+            <a href="#" class="card-link">
+              <article class="card card_type_film">
+                <div class="overlay"></div>
+                <h3 class="card__title">
+                  Фильм режиссёра, который бросил киношколу
+                </h3>
+                <p class="card__text">
+                  Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                  ставка, если бы вы не знали, что режиссёр — Пол Томас
+                  Андерсон?
+                </p>
+              </article>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="card-link">
+              <article class="card card_type_book">
+                <div class="overlay"></div>
+                <h3 class="card__title">
+                  Книга, где описан один скучный день из жизни рекламного агента
+                </h3>
+                <p class="card__text">
+                  Объёмом почти в тысячу страниц. Иногда без знаков препинания и
+                  с переходами на древнеанглийский. В ней одновременно
+                  рассказывается о 16 июня 1904 года и об истории литературы,
+                  начиная с античных времён. И это всё накладывается на
+                  эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
+                  Джеймса Джойса?
+                </p>
+              </article>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="card-link">
+              <article class="card card_type_picture">
+                <div class="overlay"></div>
+                <h3 class="card__title">
+                  Картина, которую повторит даже 5-летний сын маминой подруги
+                </h3>
+                <p class="card__text">
+                  Ну действительно, там линия, тут кружочек, а здесь и вовсе
+                  что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
+                  котиков... Сколько бы вы на такое поставили, если бы не знали,
+                  что это — одна из революционных работ Кандинского?
+                </p>
+              </article>
+            </a>
+          </li>
+        </ul>
+        <a href="#" class="lots__look-more-link"> посмотреть больше </a>
+      </section>
+      <section class="about">
+        <div class="logo__column">
+          <div class="about__logo">
+            <img
+              class="about__logo-image"
+              src="./images/logo-white.svg"
+              alt="лого"
+            />
+          </div>
         </div>
-      </div>
-    </section>
+        <div class="about__column">
+          <h2 class="about__title">об аукционе</h2>
+          <div class="about__text">
+            <p>
+              Здесь вы&nbsp;не&nbsp;встретите очередное пафосное собрание
+              невероятно дорогого антиквариата. Наши лоты вообще не&nbsp;должны
+              были попасть ни&nbsp;на&nbsp;один аукцион. Потому что кому нужен
+              дневник девочки-подростка или картина, которую может нарисовать
+              даже ребёнок? Кому нужны все эти странные вещи, созданные
+              любителями?
+            </p>
+            <p>
+              Слишком сложные или, наоборот, слишком простые. Опережающие своё
+              время. В&nbsp;пух и&nbsp;прах растерзанные критиками. Непринятые
+              и&nbsp;непонятые. Когда-то они казались просто неудачными. Но,
+              несмотря на&nbsp;критику, кажущуюся простоту или сложность, сейчас
+              без этих лотов невозможно представить современную культуру. Когда
+              в&nbsp;эти вещи не верил никто, продолжали верить
+              их&nbsp;создатели. И&nbsp;сейчас эти лоты стали культовыми.
+            </p>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer class="footer">
       <address class="footer__address">
         <div class="footer__address_column">
           <a class="footer__address_underline" href="tel:+99995555555"
-          >+9(999)555-55-55</a
+            >+9(999)555-55-55</a
           >
           <a class="footer__address_underline" href="mailto:info@sobaka.ge"
             >info@sobaka.ge</a
@@ -186,7 +189,6 @@
           </li>
         </ul>
       </div>
-    </main>
     </footer>
   </body>
 </html>
