fixed bugs from the reviewer

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
           <li class="header__links-list-item_no-bullit header__link_active">
             <a>главная</a>
           </li>
-          <li class="header__links-list-item"><a>посмотреть лоты</a></li>
-          <li class="header__links-list-item"><a>об аукционе</a></li>
+          <li class="underline"><a>посмотреть лоты</a></li>
+          <li class="underline"><a>об аукционе</a></li>
         </ul>
       </nav>
       <a class="header__logo">
@@ -27,16 +27,10 @@
           class="header__logo-image"
         />
       </a>
-      <address class="address">
-        <div class="header__address">
-          <a class="header__address_underline" href="tel:+99995555555"
-            >+9(999)555-55-55</a
-          >
-          <a class="header__address_underline" href="mailto:info@sobaka.ge"
-            >info@sobaka.ge</a
-          >
-          <p class="">наб. Принсенграхт 263-<br />265, Амстердам</p>
-        </div>
+      <address class="address header__address">
+        <a class="underline" href="tel:+99995555555">+9(999)555-55-55</a>
+        <a class="underline" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <p class="">наб. Принсенграхт 263-<br />265, Амстердам</p>
       </address>
     </header>
     <main>
@@ -48,10 +42,10 @@
           <span class="aligned-text_right">надо</span>
         </h1>
         <div class="cover__description">
-          <span class="cover__description-text">
+          <p class="cover__description-text">
             Аукцион вещей, в которые никто не верил
-          </span>
-          <button class="bet-button">Сделать ставку</button>
+          </p>
+          <button class="bet-button" type="button">Сделать ставку</button>
         </div>
       </section>
       <section class="lots">
@@ -144,19 +138,13 @@
       </section>
     </main>
     <footer class="footer">
-      <address class="footer__address">
-        <div class="footer__address_column">
-          <a class="footer__address_underline" href="tel:+99995555555"
-            >+9(999)555-55-55</a
-          >
-          <a class="footer__address_underline" href="mailto:info@sobaka.ge"
-            >info@sobaka.ge</a
-          >
-          <p class="">
-            наб. Принсенграхт 263-265,<br />
-            Амстердам
-          </p>
-        </div>
+      <address class="address footer__address">
+        <a class="underline" href="tel:+99995555555">+9(999)555-55-55</a>
+        <a class="underline" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <p>
+          наб. Принсенграхт 263-265,<br />
+          Амстердам
+        </p>
       </address>
 
       <nav class="footer__menu">
@@ -164,28 +152,32 @@
           <li class="footer__links-list-item_no-bullit footer__link_active">
             <a>главная</a>
           </li>
-          <li class="footer__links-list-item"><a>посмотреть лоты</a></li>
-          <li class="footer__links-list-item"><a>об аукционе</a></li>
+          <li class="underline"><a>посмотреть лоты</a></li>
+          <li class="underline"><a>об аукционе</a></li>
         </ul>
       </nav>
       <div class="footer__social">
         <ul class="footer__social-list">
           <li class="footer__social-list-item">
-            <img
-              class="footer__social-icon"
-              src="./images/yt.svg"
-              alt="youtube"
-            />
+            <a href="#0"
+              ><img
+                class="footer__social-icon"
+                src="./images/yt.svg"
+                alt="youtube"
+            /></a>
           </li>
           <li class="footer__social-list-item">
-            <img class="footer__social-icon" src="./images/vk.svg" alt="vk" />
+            <a href="#0"
+              ><img class="footer__social-icon" src="./images/vk.svg" alt="vk"
+            /></a>
           </li>
           <li class="footer__social-list-item">
-            <img
-              class="footer__social-icon"
-              src="./images/pinterest.svg"
-              alt="pinterest"
-            />
+            <a href=""
+              ><img
+                class="footer__social-icon"
+                src="./images/pinterest.svg"
+                alt="pinterest"
+            /></a>
           </li>
         </ul>
       </div>
